crates/swc/tests/tsc-references/templateLiteralTypes7.1.normal.js
//// [templateLiteralTypes7.ts]
const g1 = g; // ok
const g2 = g; // error
const g3 = g; // ok
